# Hw36

./: BD.txt  CMakeLists.txt  README.md
sources/: Chat.cpp  Chat.h  Logger.h  Message.cpp  Message.h  Network.cpp  Network.h  SystemInfo.cpp  SystemInfo.h  User.cpp  User.h  contactswindow.cpp  contactswindow.h  contactswindow.ui  historyformm.cpp  historyformm.h  historyformm.ui  loginform.cpp  loginform.h  loginform.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  registrationform.cpp  registrationform.h  registrationform.ui  sha256.cpp  startscreen.cpp  startscreen.h  startscreen.ui
